adicionado config para a instalação

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ APP_DEBUG=true
 APP_PORT=8010
 APP_URL=http://localhost:${APP_PORT}
 
+SYSTEM_PASSWORD=system
+ADMIN_PASSWORD=admin
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
