--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ APP_URL=http://localhost:${APP_PORT}
 SYSTEM_PASSWORD=system
 ADMIN_PASSWORD=admin
 
+# protobufer server port
+SERVER_PORT=50051
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
