update all for kubernetes

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,22 @@
+.git
+.git*
 /data
 .bladeformatterrc
 .editorconfig
 .env.example
 .prettierrc
+.env
+*.log
+/public/hot
+/public/cache/*
+/storage/app/*
+/storage/debugbar/*
+/storage/framework/cache/*
+/storage/framework/session/*
+/storage/framework/views/*
+/storage/logs/*
+/tests/*
+/vendor
+/node_modules
+Makefile
+cache/*
