--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,7 +47,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: '.'
-          target: 'server'
+          target: 'grpc'
           push: true
           tags: |
             devoptimus/ged-client-grpc-server:latest
