--- a/.env.example
+++ b/.env.example
@@ -4,24 +4,37 @@ APP_KEY=base64:XdF0lbslo8M+jTII1g8QYEtUAl9mqryspXmMeZz/TSE=
 APP_DEBUG=true
 APP_PORT=8010
 APP_URL=http://localhost:${APP_PORT}
+APP_PATH=client
 
+#
+# GRPC
+#
+GRPC_PORT=50051
+
+#
+# Migrate
+#
 SYSTEM_PASSWORD=system
 ADMIN_PASSWORD=admin
 
-# protobufer server port
-SERVER_PORT=50051
-
+#
+# Logging
+#
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#
+# Database
+#
+DB_CONNECTION=pgsql
+DB_WRITER_HOST=database-writer
+DB_WRITER_PORT=5432
+DB_READER_HOST=database-reader
+DB_READER_PORT=5432
 DB_SUPER_DATABASE=postgres
 DB_SUPER_USERNAME=postgres
 DB_SUPER_PASSWORD=postgres
-
-DB_CONNECTION=pgsql
-DB_HOST=postgresql-client
-DB_PORT=5432
 DB_DATABASE=db_client
 DB_USERNAME=changeme
 DB_PASSWORD=changeme
@@ -52,6 +65,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
+AWS_REGION=sa-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
