adicionado suporte a S3 e criação de URL temporárias

--- a/.env.example
+++ b/.env.example
@@ -6,52 +6,35 @@ APP_PORT=8010
 APP_URL=http://localhost:${APP_PORT}
 APP_PATH=client
 
-#
-# GRPC
-#
-GRPC_PORT=50051
-
-#
-# Migrate
-#
-SYSTEM_PASSWORD=system
-ADMIN_PASSWORD=admin
-
-#
-# Logging
-#
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#
-# Database
-#
 DB_CONNECTION=pgsql
-DB_WRITER_HOST=database-writer
+DB_WRITER_HOST=db-writer
 DB_WRITER_PORT=5432
-DB_READER_HOST=database-reader
+DB_READER_HOST=db-reader
 DB_READER_PORT=5432
 DB_SUPER_DATABASE=postgres
+DB_DATABASE=db_client
 DB_SUPER_USERNAME=postgres
 DB_SUPER_PASSWORD=postgres
-DB_DATABASE=db_client
 DB_USERNAME=changeme
 DB_PASSWORD=changeme
 
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=memcached
 
-REDIS_HOST=redis-client
-REDIS_PORT=6379
-REDIS_USERNAME=null
-REDIS_PASSWORD=null
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
@@ -64,7 +47,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
+AWS_DEFAULT_REGION=sa-east-1
 AWS_REGION=sa-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
@@ -83,3 +66,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SYSTEM_PASSWORD=system
+ADMIN_PASSWORD=admin
+GRPC_PORT=50051
