--- a/api/.env.example
+++ b/api/.env.example
@@ -1,30 +1,35 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME="GED Client"
+APP_ENV=development
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_PORT=8010
+APP_URL=http://localhost:${APP_PORT}
+APP_PATH=client
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=stdout
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_SUPER_USERNAME=postgres
+DB_SUPER_PASSWORD=postgres
+DB_SUPER_DATABASE=null
+DB_WRITER_HOST=localhost
+DB_WRITER_PORT=5432
+DB_READER_HOST=localhost
+DB_READER_PORT=5433
+DB_DATABASE=db_ecodoc
+DB_USERNAME=changeme
+DB_PASSWORD=changeme
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+BROADCAST_DRIVER=log
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_HOST=127.0.0.1
+REDIS_HOST=localhost
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -39,7 +44,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
+AWS_REGION=sa-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
@@ -57,3 +62,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PASSWORD_SYSTEM=system
+PASSWORD_ADMIN=admin
+PASSWORD_USER=password
+
+URL_SUBSCRIBE=
