update docker composer file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       - APP_KEY=base64:QccChj9qx2NFUmmOAgpu71g9WuiwkQbm5vwjgJQt/5M=
       - PASSWORD_SYSTEM=system
       - PASSWORD_ADMIN=admin
+      - PASSWORD_USER=ecodoc
       - DB_SUPER_USERNAME=postgres
       - DB_SUPER_PASSWORD=postgres
       - DB_USERNAME=optimus
@@ -73,7 +74,7 @@ services:
       - REDIS_PASSWORD=null
       - AWS_ACCESS_KEY_ID=null
       - AWS_SECRET_ACCESS_KEY=null
-      - URL_SUBSCRIBE=http://192.168.0.145:8080/api/app/9b67d22a-2c01-4a6e-8ddb-84f782f97a91/subscribe?signature=6c807c2ce4660ff5781f2cd3d0ebe5d0d5bafbf04af3a92d96efe1dfd6e17f14
+      - URL_SUBSCRIBE=http://ged-admin-nginx/api/app/9b67d22a-2c01-4a6e-8ddb-84f782f97a91/subscribe?signature=6c807c2ce4660ff5781f2cd3d0ebe5d0d5bafbf04af3a92d96efe1dfd6e17f14
     healthcheck:
       test: [ "CMD", "nc", "-z", "127.0.0.1", "9000" ]
       interval: 5s
@@ -118,7 +119,7 @@ services:
       - REDIS_PASSWORD=null
       - AWS_ACCESS_KEY_ID=null
       - AWS_SECRET_ACCESS_KEY=null
-      - URL_SUBSCRIBE=http://192.168.0.145:8080/api/app/9b67d22a-2c01-4a6e-8ddb-84f782f97a91/subscribe?signature=6c807c2ce4660ff5781f2cd3d0ebe5d0d5bafbf04af3a92d96efe1dfd6e17f14
+      - URL_SUBSCRIBE=http://ged-admin-nginx/api/app/9b67d22a-2c01-4a6e-8ddb-84f782f97a91/subscribe?signature=6c807c2ce4660ff5781f2cd3d0ebe5d0d5bafbf04af3a92d96efe1dfd6e17f14
     depends_on:
       app-install:
         condition: service_completed_successfully
