update docker composer file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
       - AWS_SECRET_ACCESS_KEY=null
       - URL_SUBSCRIBE=http://ged-admin-nginx/api/app/9b67d22a-2c01-4a6e-8ddb-84f782f97a91/subscribe?signature=6c807c2ce4660ff5781f2cd3d0ebe5d0d5bafbf04af3a92d96efe1dfd6e17f14
     volumes:
-      - data:/home/app/public_html/storage/app
+      - ./data:/home/app/public_html/storage/app
     command: [ "php", "artisan", "app:install" ]
   api-fpm:
     image: devoptimus/ged-client-fpm
@@ -78,7 +78,7 @@ services:
       - AWS_SECRET_ACCESS_KEY=null
       - URL_SUBSCRIBE=http://ged-admin-nginx/api/app/9b67d22a-2c01-4a6e-8ddb-84f782f97a91/subscribe?signature=6c807c2ce4660ff5781f2cd3d0ebe5d0d5bafbf04af3a92d96efe1dfd6e17f14
     volumes:
-      - data:/home/app/public_html/storage/app
+      - ./data:/home/app/public_html/storage/app
     healthcheck:
       test: [ "CMD", "nc", "-z", "127.0.0.1", "9000" ]
       interval: 5s
@@ -125,7 +125,7 @@ services:
       - AWS_SECRET_ACCESS_KEY=null
       - URL_SUBSCRIBE=http://ged-admin-nginx/api/app/9b67d22a-2c01-4a6e-8ddb-84f782f97a91/subscribe?signature=6c807c2ce4660ff5781f2cd3d0ebe5d0d5bafbf04af3a92d96efe1dfd6e17f14
     volumes:
-      - data:/home/app/public_html/storage/app
+      - ./data:/home/app/public_html/storage/app
     depends_on:
       app-install:
         condition: service_completed_successfully
